2009-10-05  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Docstring typo fix..

2009-10-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/screen.py:
	* tools/genmenu.py:
	Use app_commands.py instead of commands.py.

2009-10-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/screen.py:
	Fix NEW_RECORD command in DMP.

2009-09-29  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Add a dummy default value to e_pytis_menu.next_position column.

2009-09-29  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Avoid duplicate recomputation of rights in e_pytis_role_members_trigger.

2009-09-29  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Disable DMP triggers when requested even on updates.

2009-09-29  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Fix docstring quotes..

2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Initialize form folding properly and honor reload/reset requests.

2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/presentation/types_.py:
	Make subcount column id explicit in PrettyFoldable, don't use naming convention.

2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	Allow using values, not only columns, in LTreeAncestor and LTreeDescendant.

2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	Fix of data operators LTreeAncestor and LTreeDescendant.

2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	New data operators LTreeAncestor and LTreeDescendant.

2009-09-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Try to completely fix query retry in dbapi.py.

2009-09-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Amend: yes.
	Fix invalid local variable reference in dbapi.py
	
	

2009-09-24  Milan Zamazal  <pdm@brailcom.org>
